--- a/Proves/pres_final.html
+++ b/Proves/pres_final.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <title>Galeria 3d</title>
+      <title>Galeria 3D</title>
       <meta name="description" content="" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <style>
@@ -69,7 +69,7 @@
     </head>
     <body>
       <div class="contenidor-titol">
-        <h1>Galeria Mapbox edificis en 3d</h1>
+        <h1>Galeria Mapbox edificis en 3D</h1>
         <h2>
           Projecte per a crear mapes d'edificis en 3 dimensions i documentació
           per a replicar-los i adaptar-los a noves necessitats.
