--- a/gljs_inicial/farmacias.html
+++ b/gljs_inicial/farmacias.html
@@ -22,9 +22,9 @@
       type="text/css"
     />
 
-    <link href="css/estilobase.css" rel="stylesheet" />
-    <script src="js/utils.js"></script>
-    <script src='js/farmacias.js'></script>
+    <link href="../css/estilobase.css" rel="stylesheet" />
+    <script src="../js/utils.js"></script>
+    <script src='../js/farmacias.js'></script>
 
     <script>
       
