--- a/gljs_inicial/mapbox-icgc.html
+++ b/gljs_inicial/mapbox-icgc.html
@@ -6,8 +6,9 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
-    <link href='css/estilobase.css' rel='stylesheet' />
-    <script src='js/3d.js'></script>
+
+    <link href='../css/estilobase.css' rel='stylesheet' />
+    <script src='../js/3d.js'></script>
     <script>
         var map;
 
