--- a/gljs_inicial/edificios.html
+++ b/gljs_inicial/edificios.html
@@ -9,8 +9,8 @@
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
         <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
     
-        <link href='css/estilobase.css' rel='stylesheet' />
-        <script src='js/edificios.js'></script>
+        <link href='../css/estilobase.css' rel='stylesheet' />
+        <script src='../js/edificios.js'></script>
 
         <script>
             var map;
