--- a/gljs_inicial/mapa-rutas3d.html
+++ b/gljs_inicial/mapa-rutas3d.html
@@ -6,10 +6,10 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
-    <link href='css/estilobase.css' rel='stylesheet' />
-
-    <script src='js/3d.js'></script>
-    <script src='js/rutas.js'></script>
+    
+    <link href='../css/estilobase.css' rel='stylesheet' />
+    <script src='../js/3d.js'></script>
+    <script src='../js/rutas.js'></script>
     <script>
         
         var map;
