--- a/gljs_inicial/metamapa.html
+++ b/gljs_inicial/metamapa.html
@@ -6,9 +6,10 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link href='css/estilobase.css' rel='stylesheet' />
-    <script src='js/utils.js'></script>
-    <script src='js/socrata.js'></script>
+    
+    <link href='../css/estilobase.css' rel='stylesheet' />
+    <script src='../js/utils.js'></script>
+    <script src='../js/socrata.js'></script>
     <style>
         #results {
             width: 100%;
