--- a/gljs_inicial/poblacion.html
+++ b/gljs_inicial/poblacion.html
@@ -16,10 +16,9 @@
     <script src="https://unpkg.com/flatgeobuf@3.24.0/dist/flatgeobuf-geojson.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js"></script>
 
-    <link href='css/estilobase.css' rel='stylesheet' />
-
-    <script src='js/utils.js'></script>
-    <script src='js/poblacion.js'></script>
+    <link href='../css/estilobase.css' rel='stylesheet' />
+    <script src='../js/utils.js'></script>
+    <script src='../js/poblacion.js'></script>
 
     <script>
         
