--- a/Proves/f.html
+++ b/Proves/f.html
@@ -24,7 +24,7 @@
           center: [2.170529, 41.387485], 
           zoom: 14, 
           pitch: 55,
-          attributionControl: false,
+          //attributionControl: false,
           hash: true,
         });
         map.on('load', function() {
