--- a/valencia.html
+++ b/valencia.html
@@ -27,7 +27,7 @@
                     style: 'mapbox://styles/mapbox/light-v10',
                     center: [ -0.376347296480418, 39.46971305343229 ],
                     zoom: 15,
-                    attributionControl: false,
+                   // attributionControl: false,
                     pitch: 45,
                     hash: true
                 });
