--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
 
       <div class="alert seccion quarentena">
         <h4>Maps & scrollytelling (Mapbox Studio + GL JS)</h4>
-	<h5></h5>
 
         <div class="alert seccion MapboxGLJS">
           <h5>Proves: 3D</h5>
@@ -283,8 +282,7 @@
               <ul>
                 <h6>
                   Combinació entre l'extrusió categoritzada de cadastre i els
-                  punts de refugis climàtics
-                </h6>
+                  punts de refugis climàtics </h6>
                 <li>
                   <a href="Proves/g.html" target="_blank">g.</a> Estil des de
                   Studio a partir de la combinació entre f1 i els punts/<a href="https://www.youtube.com/watch?v=kzPdpZ1BDG4" target="_blank">marcadors</a>
@@ -304,11 +302,21 @@
           <h5>Proves: ST</h5>
           <ul>
             <li>
-              <a href="storytelling-Barcelona.html" target="_blank">Proves 3D amb API de storytelling</a>
+              <a href="b_ScrollyShelters.html" target="_blank">Proves 3D amb scrollytelling</a>
             </li>
           </ul>
         </div>
         <!--- Div Proves ST -->
+      
+        <div class="alert seccion MapboxGLJS">
+          <h5>DEMO: OFF</h5>
+          <ul>
+            <li>
+              <a href="FinalVIz-OFF/pres_final.html" target="_blank">Presentació visualitzacions OFF</a>
+            </li>
+          </ul>
+        </div>
+        <!--- Div DEMO: OFF -->
 
       </div>
       <!--- Div quarentena -->
