--- a/FinalVIz-OFF/B0_VizShelters_shelterCoverage.html
+++ b/FinalVIz-OFF/B0_VizShelters_shelterCoverage.html
@@ -31,7 +31,7 @@
         "hsl(0, 3%, 77%)",
       ];
       function init() {
-        addMap();
+        addMap("mapbox://styles/mapbox/basic-v9");
 
         map.on("load", function () {
           //Layers
