--- a/b_ScrollyShelters.html
+++ b/b_ScrollyShelters.html
@@ -215,7 +215,7 @@ Aut fuga eos sit sit architecto. Officiis iste officia quos voluptatem. Necessit
             }
           };
 
-        addMap();
+        addMap("mapbox://styles/mapbox/basic-v9");
 
         map.on("load", function () {
           //Layers
