--- a/Proves/a.html
+++ b/Proves/a.html
@@ -22,7 +22,7 @@
     <div id="mapa"></div>
     <script>
       mapboxgl.accessToken =
-        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ'; // Token to access the API
+        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ'; // Token to access the API
       const map = new mapboxgl.Map({
         container: 'mapa', // Container ID
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
