--- a/gljs_inicial/farmacias.html
+++ b/gljs_inicial/farmacias.html
@@ -32,7 +32,7 @@
       var farmaciasGeoJSON;
       function init() {
         mapboxgl.accessToken =
-          "pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ";
+          "pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ";
         map = new mapboxgl.Map({
           container: "map",
           style: "mapbox://styles/mapbox/dark-v10",
