--- a/new3dbuildings.html
+++ b/new3dbuildings.html
@@ -93,7 +93,7 @@ body { margin: 0; padding: 0; }
 </div>
 
 <script>
-	mapboxgl.accessToken = 'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+	mapboxgl.accessToken = 'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ';
     const map = new mapboxgl.Map({
         container: 'map', // container ID
         center: [2.17404, 41.40337],
