--- a/Proves/d.html
+++ b/Proves/d.html
@@ -20,7 +20,7 @@
     <div id="mapa"></div>
     <script>
       mapboxgl.accessToken =
-        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ';
       const map = new mapboxgl.Map({
         style: 'mapbox://styles/mapbox/light-v11',
         center: [2.17404, 41.40337], 
