--- a/Proves/f.html
+++ b/Proves/f.html
@@ -17,7 +17,7 @@
       <div id="mapa"></div>
       <script>
         mapboxgl.accessToken =
-          'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+          'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ';
         map = new mapboxgl.Map({
           container: 'mapa',
           style: 'mapbox://styles/mapbox/light-v11', // Estil pla per evitar superposició
