--- a/Proves/g.html
+++ b/Proves/g.html
@@ -18,7 +18,7 @@
     <div id="mapa"></div>
     <script>
       mapboxgl.accessToken =
-        "pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ";
+        "pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ";
       const map = new mapboxgl.Map({
         container: "mapa", // container ID
         style:"mapbox://styles/mapator/cm0noe49300dk01qodoht6wq2",
