--- a/Proves/h.html
+++ b/Proves/h.html
@@ -18,7 +18,7 @@
     <div id="mapa"></div>
     <script>
       mapboxgl.accessToken =
-        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ';
       const map = new mapboxgl.Map({
         container: 'mapa', // container ID
         style: 'mapbox://styles/mapbox/basic-v8', // Estil pla per evitar superposició, quan s'afegeixen "symbols", si no s'afegeixen des de studio a un estil, s'han d'agafar els que per defecte són compatibles amb uns estils limitats
