--- a/gljs_inicial/mapstyle.html
+++ b/gljs_inicial/mapstyle.html
@@ -2,6 +2,6 @@
     <head>
     </head>
     <body>
-        <iframe width='100%' height='400px' src="https://api.mapbox.com/styles/v1/mapator/clcz28u09001s14nzp9q5tzzr.html?title=false&access_token=pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ&zoomwheel=false#7.21/37.785/0.674" title="First_style" style="border:none;"></iframe>
+        <iframe width='100%' height='400px' src="https://api.mapbox.com/styles/v1/mapator/clcz28u09001s14nzp9q5tzzr.html?title=false&access_token=pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ&zoomwheel=false#7.21/37.785/0.674" title="First_style" style="border:none;"></iframe>
     </body>
 </html>
