--- a/gljs_inicial/metamapa.html
+++ b/gljs_inicial/metamapa.html
@@ -36,7 +36,7 @@
     <script>
         var map;
         function init() {
-            mapboxgl.accessToken = 'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+            mapboxgl.accessToken = 'pk.eyJ1IjoibWFwYXRvciIsImEiOiJjbTZmam4waDgwNTZyMmtzMGdva2U2Z3RzIn0.-ATkyErnGnpGKRjeMZyDHQ';
             map = new mapboxgl.Map({
                 container: 'map',
                 style: 'mapbox://styles/mapbox/dark-v10',
