--- a/index.html
+++ b/index.html
@@ -104,20 +104,6 @@
           <div class="col">
             <ul>
               <li>
-                <a href="gljs_inicial/mapstyle.html" target="_blank">
-                  Embedded first style
-                </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/mapbox-basico.html" target="_blank"> Proves mapbox </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/mapbox-global.html" target="_blank"> Mapa global </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/edificios.html" target="_blank"> Cadastre </a>
-              </li>
-              <li>
                 <a href="gljs_inicial/mapa3d.html" target="_blank"> Mapa 3D </a>
               </li>
               <li>
@@ -221,9 +207,10 @@
           <h5>Proves: 3D</h5>
           <ul>
             <li>
-              <a href="Proves/pres_final.html" target="_blank">Presentació 3D</a>
+              <a href="https://mapbox3dbuildings-1064ac.gitlab.io/" target="_blank">Presentació 3D</a>
             </li>
           </ul>
+          <!--
           <ul>
             <li>
               <h5>
@@ -296,6 +283,7 @@
             </li>
           </ul>
         </div>
+        -->
         <!--- Div Proves 3D -->
 
         <div class="alert seccion MapboxGLJS">
@@ -312,7 +300,7 @@
           <h5>DEMO: OFF</h5>
           <ul>
             <li>
-              <a href="FinalVIz-OFF/pres_final.html" target="_blank">Presentació visualitzacions OFF</a>
+              <a href="https://vizoff25-c7579f.gitlab.io/" target="_blank">Presentació visualitzacions OFF</a>
             </li>
           </ul>
         </div>
