--- a/b_ScrollyShelters.html
+++ b/b_ScrollyShelters.html
@@ -16,7 +16,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css"
       rel="stylesheet"
     />
-    <script src="./FinalVIz-OFF/js/utils.js"></script>
+    <script src="geoweb/FinalVIz-OFF/js/utils.js"></script>
 
     <style>
       body {
