--- a/index.html
+++ b/index.html
@@ -92,114 +92,12 @@
           <br />
           <small>
             + posteriors !
-            <br /><br /><em>A Firefox pot donar errors! Desbloquejeu els Blockers^^.</em>
+            <br /><br /><em>A Firefox i mòbil pot donar errors! Desbloquejeu els Blockers^^.</em>
           </small>
         </h4>
       </nav>
       <br />
-
-      <div class="alert seccion MapboxGLJS">
-        <h4>Mapbox GL JS inicial</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li>
-                <a href="gljs_inicial/mapa3d.html" target="_blank"> Mapa 3D </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/mapa-rutas3d.html" target="_blank"> Mapa rutes 3D </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/terremotos.html" target="_blank"> Terratrèmols </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/farmacias.html" target="_blank"> Farmàcies </a>
-              </li>
-              <li>
-                <a href="gljs_inicial/pwa.html" target="_blank"> PWA</a>
-              </li>
-              <li>
-                <a href="gljs_inicial/poblacion.html" target="_blank"> Població</a>
-              </li>
-              <li>
-                <a href="gljs_inicial/metamapa.html" target="_blank"> Metamapa</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="alert seccion storytelling">
-        <h4>Mapbox StoryTelling</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li><a href="storytelling.html" target="_blank"> Volcans </a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="alert seccion kepler">
-        <h4>KeplerGL</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li>
-                <a href="accidentes.html" target="_blank"> Accidents </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="alert seccion practicas">
-        <h4>Pràctica M2A</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li>
-                <a href="z.html" target="_blank">Pràctica bars de Barna</a>
-                To-do!
-              </li>
-            </ul>
-          </div>
-        </div>
-        <h4>Pràctica M2B</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li>
-                <a href="valencia.html" target="_blank">Visor d'edificis cadastrals de València capital</a>
-              </li>
-              <li>
-                <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="alert seccion tesina">
-        <h4>Visor del projecte final del màster</h4>
-        <div class="row">
-          <div class="col">
-            <ul>
-              <li>
-                <a href="https://riura31.users.earthengine.app/view/visorindexsrmb" target="_blank">Visor en línia d'índexs a partir d'imatges satel·litàries de Sentinel-2</a>
-              </li>
-              <li>
-                <a href="" target="_blank">Enllaç al resum de la tesina</a>
-                To-do!
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
+      
       <div class="alert seccion quarentena">
         <h4>Maps & scrollytelling (Mapbox Studio + GL JS)</h4>
 
@@ -210,6 +108,9 @@
               <a href="https://mapbox3dbuildings-1064ac.gitlab.io/" target="_blank">Presentació 3D</a>
             </li>
           </ul>
+        </div>
+        <!--- Div Proves 3D -->
+
           <!--
           <ul>
             <li>
@@ -284,7 +185,7 @@
           </ul>
         </div>
         -->
-        <!--- Div Proves 3D -->
+        <!--- Ex-Div Proves 3D -->
 
         <div class="alert seccion MapboxGLJS">
           <h5>Proves: ST</h5>
@@ -306,9 +207,110 @@
         </div>
         <!--- Div DEMO: OFF -->
 
-      </div>
-      <!--- Div quarentena -->
     </div>
-    <!--- Div container -->
+    <!--- Div quarentena MAPS & SCROLLYTELLING -->
+
+      <div class="alert seccion tesina">
+        <h4>Visor del projecte final del màster</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>
+                <a href="https://riura31.users.earthengine.app/view/visorindexsrmb" target="_blank">Visor en línia d'índexs a partir d'imatges satel·litàries de Sentinel-2</a>
+              </li>
+              <li>
+                <a href="" target="_blank">Enllaç al resum de la tesina</a>
+                To-do!
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="alert seccion practicas">
+        <h4>Pràctica M2A</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>
+                <a href="z.html" target="_blank">Pràctica bars de Barna</a>
+                To-do!
+              </li>
+            </ul>
+          </div>
+        </div>
+        <h4>Pràctica M2B</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>
+                <a href="valencia.html" target="_blank">Visor d'edificis cadastrals de València capital</a>
+              </li>
+              <li>
+                <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="alert seccion kepler">
+        <h4>KeplerGL</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>
+                <a href="accidentes.html" target="_blank"> Accidents </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="alert seccion storytelling">
+        <h4>Mapbox StoryTelling</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li><a href="storytelling.html" target="_blank"> Volcans </a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="alert seccion MapboxGLJS">
+        <h4>Mapbox GL JS inicial</h4>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>
+                <a href="gljs_inicial/mapa3d.html" target="_blank"> Mapa 3D </a>
+              </li>
+              <li>
+                <a href="gljs_inicial/mapa-rutas3d.html" target="_blank"> Mapa rutes 3D </a>
+              </li>
+              <li>
+                <a href="gljs_inicial/mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
+              </li>
+              <li>
+                <a href="gljs_inicial/terremotos.html" target="_blank"> Terratrèmols </a>
+              </li>
+              <li>
+                <a href="gljs_inicial/farmacias.html" target="_blank"> Farmàcies </a>
+              </li>
+              <li>
+                <a href="gljs_inicial/pwa.html" target="_blank"> PWA</a>
+              </li>
+              <li>
+                <a href="gljs_inicial/poblacion.html" target="_blank"> Població</a>
+              </li>
+              <li>
+                <a href="gljs_inicial/metamapa.html" target="_blank"> Metamapa</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
   </body>
 </html>
